# qaf

./: .gitignore  Cargo.toml  README.md
.github/workflows/: README.md  build.yml  release.yml
src/: main.rs  menubar.rs  speaker.rs
